Update project with latest changes and new files

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -36,8 +36,8 @@
             
                     <form class="login-form" id="loginForm">
                         <div class="form-group">
-                            <label for="username">Username</label>
-                            <input type="text" id="username" name="username" placeholder="Enter your username" required>
+                            <label for="username">Email</label>
+                            <input type=\"email\" id=\"username\" name=\"username\" placeholder=\"Enter your email address\" required>
                         </div>
                         
                         <div class="form-group">
